# OpenSCAD_Plugin

./: .gitignore  README.md  bom_parser.py  install.py  instructions.md  interference.py  mcp_config.json  nesting.py  plugin.json  pyproject.toml  scad_utils.py  server.py  splitting.py  stl_utils.py
.github/workflows/: release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/check_interference_20260629/: index.md  metadata.json
conductor/archive/extract_bom_20260629/: index.md
conductor/archive/fabrication_2d_pipeline_20260629/: index.md  metadata.json  plan.md  spec.md
conductor/archive/split_for_printing_20260629/: spec.md
conductor/tracks/check_interference_20260629/: plan.md  spec.md
conductor/tracks/extract_bom_20260629/: metadata.json  plan.md  spec.md
conductor/tracks/fabrication_2d_pipeline_20260629/: plan.md
conductor/tracks/nest_panels_20260629/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/split_for_printing_20260629/: index.md  metadata.json  plan.md
skills/openscad-mcp/: SKILL.md
tests/: conftest.py  test_bom_parser.py  test_interference.py  test_nesting.py  test_scad_utils.py  test_server.py  test_splitting.py  test_stl_utils.py
