[project]
name = "openscad-mcp"
version = "0.1.0"
description = "MCP server for OpenSCAD 3D modeling and rendering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.2",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
]
