[project]
name = "openscad-mcp"
version = "0.1.0"
description = "Advanced MCP server empowering AI agents with OpenSCAD 3D modeling, interference checking, and DXF/STL exporting capabilities."
readme = "README.md"
authors = [
  { name = "Jules", email = "jules@example.com" }
]
keywords = ["mcp", "openscad", "cad", "ai", "3d-printing"]
urls = { Repository = "https://github.com/jmo808/OpenSCAD_Plugin" }
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.2",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
]
